# ticketwright

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json.tmpl  statusline.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: qc-reviewer.md
.claude/commands/: prime-domain.md  prime-ticket.md  prime-warehouse.md  recall.md
.claude/config/: stack.example.asana-bq.yaml  stack.example.azure.yaml  stack.schema.md  stack.yaml
.claude/hooks/: db_write_guard.py  regenerate_ticket_index.py  session_context.py  ticket_index_context.py
.claude/skills/build-context-pack/: SKILL.md
.claude/skills/build-ticket-index/: SKILL.md
.claude/skills/configure-workspace/: SKILL.md
.claude/skills/deliver-ticket/: SKILL.md
.claude/skills/onboard-teammate/: SKILL.md
.claude/skills/productize-workflow/: SKILL.md
.claude/skills/qc-review/: SKILL.md
.claude/skills/spec-and-build/: SKILL.md
.claude/skills/start-ticket/: SKILL.md
.github/workflows/: ci.yml  publish.yml
adapters/: README.md
adapters/chat/: slack.md  teams.md
adapters/docstore/: gdrive.md  sharepoint.md
adapters/tracker/: asana.md  azure-devops.md  github-issues.md  jira.md  linear.md  monday.md
adapters/vcs/: azure-repos.md  github.md  gitlab.md
adapters/warehouse/: bigquery.md  databricks.md  postgres.md  redshift.md  snowflake.md  synapse.md
docs/: REVIEW.md  pypi-setup.md  ticket-index.md
templates/: AGENTS.md.tmpl  gitignore.tmpl  plan.md.tmpl  spec.md.tmpl  ticket-README.md.tmpl
templates/productized-skill/: SKILL.md.tmpl
templates/productized-skill/golden/: example.json
templates/productized-skill/sql/: qc.sql.tmpl  step.sql.tmpl
templates/productized-skill/templates/: README.md.tmpl  tracker_comment.txt.tmpl
templates/roles/: analyst.md  engineer.md  generalist.md  scientist.md
tickets/: index_data.example.json  index_data.json
ticketwright/: __init__.py  cli.py
